tests/qml/invalid/InvalidSignal2.qml
import QtQuick 2.0

Item {
  signal simpleSignal(20, 30)
}
